--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <style>
+      html {
+        background-color: grey;
+      }
+      .green {
+        color: green;
+      }
+    </style>
+  </head>
+</html>
 <h1><b>H</b>yper<b>t</b>ext <b>M</b>arkup <b>L</b>anguage</h1>
+<div class="green">Green Text</div>
