--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
       html {
         background-color: grey;
       }
-      .green {
-        color: green;
-      }
     </style>
   </head>
 </html>
 <h1><b>H</b>yper<b>t</b>ext <b>M</b>arkup <b>L</b>anguage</h1>
-<div class="green">Green Text</div>
+<div style="color: green">Green Text</div>
